<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/nombre_de_la_tarea"
        android:maxLength="50"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_business_category"
            android:text="@string/negocios"
            android:textColor="@color/white"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal_category"
            android:text="@string/personal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_other_category"
            android:text="@string/otros"
            android:textColor="@color/white" />
    </RadioGroup>


    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/add_tarea" />

</LinearLayout>