<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical"
        tools:context=".thirdApp.ThirdAppActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="44dp"
            android:text="@string/todo_list"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="@string/bienvenido" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/categor_a"
            android:textAllCaps="true"
            android:textColor="@color/todo_subtitle_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tareas"
            android:textAllCaps="true"
            android:textColor="@color/todo_subtitle_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        app:backgroundTint="@color/todo_accent"
        app:fabSize="auto"
        app:tint="@color/white"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="32dp"
        />

</FrameLayout>

