<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".secondApp.SecondAppActivity">

    <!-- Male Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/maleCardView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/femaleCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/descriptionPlaceHolder"
                android:src="@drawable/ic_male"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Female Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/femaleCardView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/maleCardView"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/descriptionPlaceHolder"
                android:src="@drawable/ic_female"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Slider Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/sliderCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maleCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heightPlaceHolder"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="120 cm" />


            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangeSliderHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="300" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Weight Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/weightCardView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/ageCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weightPlaceHolder"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="70" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingButtonSubstractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/descriptionPlaceHolder"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingButtonAddWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descriptionPlaceHolder"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Age Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/ageCardView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weightCardView"
        app:layout_constraintTop_toBottomOf="@id/sliderCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AgePlaceHolder"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agePlaceHolder"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingButtonSubstractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/descriptionPlaceHolder"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingButtonAddAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descriptionPlaceHolder"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="Calcular IMC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>